[package]
name = "starstream-node-client"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt", "env-filter"] }
wasmtime = { workspace = true }
wit-bindgen-wrpc = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"] }
wrpc-transport = { workspace = true, features = ["net"] }
wrpc-multiplexer = { workspace = true }
starstream-ledger = { workspace = true }
wrpc-pack = { workspace = true }