[package]
name = "starstream-node-server"
version = "0.1.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
] }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "net"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "fmt", "env-filter"] }
wasmtime = { workspace = true }
wit-bindgen-wrpc = { workspace = true }
wrpc-transport = { workspace = true, features = ["net"] }
starstream-ledger = { workspace = true }
wrpc-runtime-wasmtime = { workspace = true }